dist_pkgdata_DATA = \
 gnunet-logo-color.png

nodist_pkgdata_DATA = \
 config-daemon.scm \
 config-client.scm

EXTRA_DIST = \
 gnunet.conf \
 gnunetd.conf \
 hostlist.cgi \
 hostlist.php \
 init_gnunet_redhat init_gnunet_ubuntu \
 visualize_stats.sh \
 gnmessage.sh \
 junkinsert.sh \
 junklookup.sh \
 namespacehelper.sh \
 report.sh
