if HAVE_GUILE
 gdmpage = gnunet-download-manager.1
endif

man_MANS = $(gdmpage) \
gnunet-directory.1 \
gnunet-download.1 \
gnunet-gtk.1 \
gnunet-insert.1 \
gnunet-delete.1 \
gnunet-search.1 \
gnunet-chat.1\
gnunetd.1 \
gnunet-pseudonym.1 \
gnunet-stats.1 \
gnunet-transport-check.1 \
gnunet-tbench.1 \
gnunet-testbed.1 \
gnunet-tracekit.1 \
gnunet-update.1 \
gnunet-peer-info.1 \
gnunet.conf.5

EXTRA_DIST = $(man_MANS) \
 gnunet-download-manager.1