man_MANS = \
gnunet-auto-share.1 \
gnunet-chat.1\
gnunet-directory.1 \
gnunet-download.1 \
gnunet-download-manager.1 \
gnunet-insert.1 \
gnunet-search.1 \
gnunet-setup.1 \
gnunet-stats.1 \
gnunet-tbench.1 \
gnunet-testbed.1 \
gnunet-tracekit.1 \
gnunet-transport-check.1 \
gnunet-peer-info.1 \
gnunet-pseudonym.1 \
gnunet-unindex.1 \
gnunet-update.1 \
gnunet-vpn.1 \
gnunetd.1 \
gnunet.conf.5 \
gnunetd.conf.5

EXTRA_DIST = ${man_MANS}
